[gd_scene load_steps=10 format=3 uid="uid://cqtm37ygq23d2"]

[ext_resource type="Script" path="res://scripts/audio_stream_player.gd" id="1_wohga"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_xf05p"]
[ext_resource type="Texture2D" uid="uid://dlpy0n7vfcvls" path="res://assets/background.png" id="2_opowj"]
[ext_resource type="Texture2D" uid="uid://bqmw5gjp1vxyv" path="res://assets/stage-border.png" id="3_7r17o"]
[ext_resource type="Script" path="res://scripts/beatmap_parser.gd" id="3_p3j2b"]
[ext_resource type="PackedScene" uid="uid://dmm2xqwvh6l55" path="res://scenes/column.tscn" id="4_dtnvj"]
[ext_resource type="Texture2D" uid="uid://dffe6x21gy7xk" path="res://assets/BotaoCinzaNovo.png" id="7_lvduj"]

[sub_resource type="Gradient" id="Gradient_gnwmo"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_u068m"]
gradient = SubResource("Gradient_gnwmo")
fill_to = Vector2(0, 0)

[node name="Game" type="Node2D"]
script = ExtResource("1_xf05p")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource("1_wohga")

[node name="BeatmapFileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(400, 400)
visible = true
ok_button_text = "Open"
file_mode = 0

[node name="NoteSpawner" type="Node2D" parent="."]

[node name="BeatmapParser" type="Node2D" parent="."]
script = ExtResource("3_p3j2b")

[node name="Background" type="Node2D" parent="."]
position = Vector2(571, 326)
scale = Vector2(0.613889, 0.613889)

[node name="Wallpaper" type="Sprite2D" parent="Background"]
scale = Vector2(0.561827, 0.561339)
texture = ExtResource("2_opowj")

[node name="ForegroundAll" type="Sprite2D" parent="Background"]
modulate = Color(0, 0, 0, 0.203922)
position = Vector2(9.77373, 1.62894)
scale = Vector2(29.3213, 16.6205)
texture = SubResource("GradientTexture2D_u068m")

[node name="ForegroundNotes" type="Sprite2D" parent="Background"]
modulate = Color(0, 0, 0, 0.396078)
position = Vector2(-21.1766, 10.5883)
scale = Vector2(11.0973, 17.4859)
texture = SubResource("GradientTexture2D_u068m")

[node name="StageBorderLeft" type="Sprite2D" parent="Background"]
position = Vector2(-371.403, -3.22198)
rotation = 1.5708
scale = Vector2(5.02097, 1.62896)
texture = ExtResource("3_7r17o")

[node name="StageBorderRight" type="Sprite2D" parent="Background"]
position = Vector2(330.679, -3.5979)
rotation = 1.5708
scale = Vector2(5.02568, 1.62896)
texture = ExtResource("3_7r17o")

[node name="Column0" parent="." instance=ExtResource("4_dtnvj")]
position = Vector2(400, 594)
scale = Vector2(0.75, 0.75)
key_action = "key0"

[node name="Sprite2D" type="Sprite2D" parent="Column0"]
position = Vector2(-3.69549e-06, 7.689e-06)
scale = Vector2(9.31805, 9.31805)
texture = ExtResource("7_lvduj")

[node name="Column1" parent="." instance=ExtResource("4_dtnvj")]
position = Vector2(505, 594)
scale = Vector2(0.75, 0.75)
key_action = "key1"

[node name="Sprite2D" type="Sprite2D" parent="Column1"]
position = Vector2(-3.69549e-06, 7.689e-06)
scale = Vector2(9.31805, 9.31805)
texture = ExtResource("7_lvduj")

[node name="Column2" parent="." instance=ExtResource("4_dtnvj")]
position = Vector2(610, 594)
scale = Vector2(0.75, 0.75)
key_action = "key2"

[node name="Sprite2D" type="Sprite2D" parent="Column2"]
position = Vector2(-3.69549e-06, 7.689e-06)
scale = Vector2(9.31805, 9.31805)
texture = ExtResource("7_lvduj")

[node name="Column3" parent="." instance=ExtResource("4_dtnvj")]
position = Vector2(715, 594)
scale = Vector2(0.75, 0.75)
key_action = "key3"

[node name="Sprite2D" type="Sprite2D" parent="Column3"]
position = Vector2(-3.69549e-06, 7.689e-06)
scale = Vector2(9.31805, 9.31805)
texture = ExtResource("7_lvduj")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(558, 334)
zoom = Vector2(1.55, 1.55)

[connection signal="file_selected" from="BeatmapFileDialog" to="." method="_on_beatmap_file_dialog_file_selected"]
